--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+}
+
+.App {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.voting-box {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+}
+
+.each-box {
+    padding: 30px;
+    cursor: pointer;
+}
+
+.voting-box .cat {
+    color: #4ea1ed;
+    order: 1;
+}
+
+.voting-box .dog {
+    color: #66cecf;
+    order: 3;
+}
+  
+.voting-box::before {
+    order: 2;
+    content: "";
+    height: 90%;
+    border: 1px solid #a4e7ec;
+}
+
+p {
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
+    color: #a4e7ec;
+    font-size: 2rem;
+}
+
